--- a/src/screen/search/style.css
+++ b/src/screen/search/style.css
@@ -1,85 +1,102 @@
 .clip_path2 {
-  float: right;
-  margin-top: -58px;
+  display: flex;
+  justify-content: flex-end;
 }
-.container_search {
-  display: block;
-  margin-top: 58px;
-  margin-left: 26px;
+
+.location__dropdown--icon {
+  width: 1.5rem;
 }
-.arrow_down {
-  margin-bottom: 18px;
-  width: 9.41px;
+
+.location__dropdown--icon img {
+  width: 100%;
 }
-.loca {
-  border-top: none;
-  border-right: none;
-  border-left: none;
+
+.locationSection {
+  padding-top: 1.5rem;
+}
+
+.locationSection__input {
+  border: none;
   border-bottom: 2px solid #426ed9;
-  width: 298px;
-  font-size: 20px;
-  font: 'Fira Sans', sans-serif;
-  color: #293340;
-  line-height: 24px;
-  outline: none;
-  padding-bottom: 9px;
-  font-family: 'Fira Sans', sans-serif;
+  padding-bottom: 0.6rem;
+  width: 100%;
 }
-.search_span {
-  margin-left: -45px;
+
+.form__wrapper {
+  position: relative;
+}
+.location__change {
+  position: absolute;
+  right: 0;
+  top: 0.3rem;
   color: #00973f;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 500;
   font-size: 12px;
-  line-height: 14px;
 }
-.gps_section {
+.gps__wrapper {
   display: flex;
   align-items: center;
-  margin-top: 18px;
+  padding-top: 1rem;
+  padding-bottom: 1.5rem;
 }
-.gps_icon {
-  width: 16.52px;
+
+.gps__icon--wrapper {
+  width: 1.4rem;
 }
-.gps_text {
-  margin-left: 10px;
+
+.gps__wrapper .gps__icon--wrapper img {
+  width: 100%;
+}
+
+.gps__text {
   font-family: 'Fira Sans', sans-serif;
   color: #00973f;
   font-weight: 500;
-  line-height: 25px;
-  font-size: 14px;
+  font-size: 1rem;
+  padding-left: 0.6rem;
 }
-.location_main_header {
+
+.gps__text h3 {
   font-family: 'Fira Sans', sans-serif;
   color: #293340;
-  margin-top: 22px;
   font-weight: 700;
   font-size: 13px;
   letter-spacing: 0.7px;
 }
-.location_section {
-  margin-top: 22px;
+
+.suggested__area--container {
+  padding-top: 1rem;
+  height: 92vh;
 }
-.location_suggestion {
+
+.suggested__area--wrapper {
   border-bottom: 1px solid #0000001f;
-  width: 311px;
-  line-height: 47px;
+  width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
-.location_search {
+.suggested__area--wrapper p {
   font-family: 'Fira Sans', sans-serif;
-  font-size: 15px;
+  font-size: 1rem;
   font-weight: 300;
   color: #293340;
 }
-.footer_icon {
+.bottom__nav--list {
   display: flex;
-  box-shadow: 0px 0px 6px rgba(71, 77, 96, 0.2);
+  align-items: baseline;
+  padding-top: 0.4rem;
+  padding-bottom: 0.3rem;
+  justify-content: space-around;
+  box-shadow: 0px 0px 6px rgb(71 77 96 / 20%);
 }
-.footer_icon_section {
-  margin-top: 14px;
+.bottom__nav {
   position: fixed;
-  width: 377px;
+  width: 100%;
+  height: 8vh;
   bottom: 0;
+  z-index: 1;
+  background: #fff;
 }
 .footer_icon {
   display: flex;
@@ -91,9 +108,15 @@
   flex-direction: column;
   align-items: center;
 }
+.bottom__nav--imageContainer {
+  width: 1.5rem;
+}
+.bottom__nav--imageContainer img {
+  width: 100%;
+}
 .footerHeader {
   font-family: 'Fira Sans', sans-serif;
   font-size: 12px;
-  margin-top: 7px;
+  padding-top: 0.1rem;
   color: #293340;
 }
