--- a/src/screen/homePage/style.css
+++ b/src/screen/homePage/style.css
@@ -67,11 +67,11 @@
 .hero__search input {
   width: 100%;
   height: 7vh;
+  border-radius: 2rem;
   border: 2px solid #00973f;
-  border-radius: 24px;
   box-shadow: 0px 8px 16px rgb(66 110 217 / 20%);
-  font-size: 15px;
-  padding-left: 38px;
+  font-size: 1rem;
+  padding-left: 2rem;
   font-family: 'fira-sans', sans-serif;
   font-weight: 600;
   outline: none;
