resized all icons

--- a/src/screen/homePage/style.css
+++ b/src/screen/homePage/style.css
@@ -1,3 +1,7 @@
+.switch {
+  background-color: greenyellow;
+}
+
 .HomePageHeader {
   background: #fff;
   height: 15vh;
@@ -18,10 +22,6 @@
 
 .mainContainer {
   padding: 0 1rem;
-}
-
-.LogoNav img {
-  width: 55%;
 }
 
 .Nav--items {
@@ -45,7 +45,7 @@
 }
 
 .heroSection {
-  height: 52vh;
+  height: 54vh;
   background: #ffffff;
   box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
 }
@@ -79,9 +79,8 @@
 }
 
 .hero__search img {
-  width: 2rem;
   position: absolute;
-  bottom: 2px;
+  top: 30%;
   left: 7px;
 }
 
@@ -115,7 +114,7 @@
   align-items: center;
   font-size: 12px;
   color: #f75d34;
-  padding-top: 0.5rem;
+  padding-top: 0.7rem;
   font-family: sans-serif;
 }
 
@@ -228,7 +227,7 @@
 }
 
 .top__ratedRepresentative {
-  height: 46vh;
+  height: 47vh;
   background: #ffffff;
   box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
 }
@@ -241,10 +240,7 @@
 .view_all {
   display: flex;
   align-items: center;
-}
-
-.view_all img {
-  width: 1.7rem;
+  padding-top: 0.4rem;
 }
 
 .text {
@@ -256,8 +252,7 @@
 }
 
 .hero_quiz img {
-  width: 1rem;
-  margin-right: 0.4rem;
+  padding-right: 0.4rem;
 }
 
 .hero_quiz span {
@@ -277,7 +272,7 @@
   color: #00973f;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 500;
-  font-size: 1rem;
+  font-size: 0.9rem;
   padding-left: 0.5rem;
 }
 
@@ -394,9 +389,4 @@
 .footer_header {
   color: white;
   padding-left: 0.5rem;
-}
-
-.home_white {
-  margin-top: 10px;
-  margin-left: 3px;
 }
