--- a/src/screen/representatives/style.css
+++ b/src/screen/representatives/style.css
@@ -1,102 +1,34 @@
-.main__header {
-  background: linear-gradient(317.15deg, #90df6f 13.65%, #00973f 88.4%);
-  width: 100%;
-  height: 25vh;
-}
-
-.main__headerWrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 2rem;
-}
-
-.logo__wrapper {
-  width: 14rem;
-}
-
-.logo__wrapper img {
-  width: 100%;
-}
-
-.hamburger_light {
-  color: white;
-}
-
-.locationContainer {
-  padding-top: 1.7rem;
-}
-
-.locationContainer input {
-  border: none;
+.representative__filterContainer {
   width: 100%;
   height: 7vh;
-  border-radius: 2rem;
-  box-shadow: 0px 8px 16px rgb(66 110 217 / 20%);
-  font-size: 1rem;
-  padding-left: 2.6rem;
-  font-family: 'fira-sans', sans-serif;
-  font-weight: 600;
-  outline: none;
-  color: #293340;
-}
-.locationWrapper {
-  position: relative;
+  box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
+  padding-top: 1rem;
 }
 
-.representative_area_search {
-  border: none;
-  border-radius: 24px;
-  font-size: 14px;
-}
-.searchBtn_representative {
-  width: 2rem;
-  position: absolute;
-  top: 7.5rem;
-  left: 1.5rem;
-}
-.searchBtn_representative img {
-  width: 100%;
-}
-.filter_name_section {
-  width: 375px;
-  height: 43px;
-  box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
-  padding-top: 15px;
-}
-.filter_section {
+.representative__filterWrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 308px;
 }
-.filter_header {
+.representative__filterWrapper h3 {
   font-family: 'Fira Sans', sans-serif;
-  font-size: 13px;
+  font-size: 1rem;
   color: #00973f;
-  line-height: 15.6px;
   font-weight: 700;
-  margin-left: 27px;
 }
-.filter_icon {
-  width: 15px;
-  height: 10px;
-  display: flex;
-  align-items: center;
-}
+
 .filter_text {
   font-family: 'Fira Sans', sans-serif;
-  font-size: 13px;
+  font-size: 0.9rem;
   font-weight: 500;
   color: #293340;
-  margin-left: 5px;
+  padding-left: 0.5rem;
 }
+
 .representative_details {
-  margin-top: 10px;
-  padding-bottom: 100px;
+  margin-top: 0.5rem;
 }
 .representative_inner_details {
-  width: 375px;
   height: 127px;
   box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
   display: flex;
