--- a/src/screen/search/style.css
+++ b/src/screen/search/style.css
@@ -90,7 +90,7 @@
   justify-content: space-around;
   box-shadow: 0px 0px 6px rgb(71 77 96 / 20%);
 }
-.bottom__nav {
+/* .bottom__nav {
   position: fixed;
   width: 100%;
   height: 8vh;
@@ -119,4 +119,4 @@
   font-size: 12px;
   padding-top: 0.1rem;
   color: #293340;
-}
+} */
