resized reps section height

--- a/src/screen/representatives/style.css
+++ b/src/screen/representatives/style.css
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
 .representative__filterWrapper h3 {
   font-family: 'Fira Sans', sans-serif;
   font-size: 1rem;
@@ -27,89 +28,40 @@
 
 .representative_details {
   margin-top: 0.5rem;
+  min-height: 100vh;
+  padding-bottom: 3rem;
 }
+
 .representative_inner_details {
-  height: 127px;
-  box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
+  height: 20vh;
+  width: 100%;
+  box-shadow: 0px 3px 6px rgb(71 77 96 / 10%);
   display: flex;
-  justify-content: space-around;
+  background: #fff;
+  justify-content: space-between;
   align-items: center;
 }
 .representative_position {
   color: #d9a01b;
   font-family: 'Fira Sans', sans-serif;
-  font-size: 10px;
-  line-height: 12px;
+  font-size: 0.8rem;
   font-weight: 500;
-  padding-bottom: 2px;
+  padding-bottom: 0.3rem;
 }
-.representative_name {
-  font-family: 'Fira Sans', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  color: #000000;
-  padding-bottom: 5px;
-  padding-top: 9px;
-}
-.representative_jurisdiction {
-  font-family: 'Fira Sans', sans-serif;
-  font-weight: 300;
-  font-size: 12px;
-  padding-bottom: 11px;
-}
+
 .representative_image {
-  width: 88px;
+  width: 26%;
 }
-.rep_rating_button {
-  width: 14px;
-  height: 14px;
-  border: 1px solid #1ea896;
-  border-radius: 50%;
-  margin-left: 7px;
+
+.representative_image img {
+  width: 100%;
 }
-.inner_rep_button {
-  width: 8.11px;
-  height: 8.11px;
-  margin-bottom: 3px;
-  margin-left: 1.5px;
-}
-.rating_group {
-  display: flex;
-  align-items: center;
-}
-.rep_rating_colored {
-  color: #1ea896;
-  font-family: 'Fira Sans', sans-serif;
-  font-size: 14px;
-  line-height: 16.8px;
-  font-weight: 500;
-}
+
 .colored_rating_review {
   font-family: 'Fira Sans', sans-serif;
   font-style: italic;
   font-weight: 400;
   color: #474d60;
-  font-size: 12px;
-  margin-left: 8px;
-}
-.change {
-  display: flex;
-  position: fixed;
-  bottom: 0;
-  background: white;
-  justify-content: space-around;
-  width: 375px;
-  box-shadow: 0px 0px 6px rgba(71, 77, 96, 0.2);
-}
-.footer_content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 10px;
-}
-.rep_footer_header {
-  font-family: 'Fira Sans', sans-serif;
-  font-size: 12px;
-  margin-top: 7px;
-  color: #293340;
+  font-size: 0.9rem;
+  padding-left: 0.1rem;
 }
