--- a/src/screen/representatives/style.css
+++ b/src/screen/representatives/style.css
@@ -7,11 +7,12 @@
 .representative_inner_details {
   height: 20vh;
   width: 100%;
-  box-shadow: 0px 3px 6px rgb(71 77 96 / 10%);
   display: flex;
-  background: #fff;
+  background: #ffffff;
+  box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
   justify-content: space-between;
   align-items: center;
+  margin-top: 0.4rem;
 }
 .representative_position {
   color: #d9a01b;
