--- a/src/components/footerNav/style.css
+++ b/src/components/footerNav/style.css
@@ -1,18 +1,13 @@
-.bottom__nav {
+.bottom__nav--list {
   position: fixed;
   width: 100%;
-  height: 8vh;
+  height: 8%;
   bottom: 0;
   z-index: 1;
   background: #fff;
-}
-
-.bottom__nav--list {
   display: flex;
-  align-items: baseline;
-  padding-top: 0.4rem;
-  padding-bottom: 0.3rem;
   justify-content: space-around;
+  align-items: center;
   box-shadow: 0px 0px 6px rgb(71 77 96 / 20%);
 }
 
@@ -22,17 +17,9 @@
   align-items: center;
 }
 
-.bottom__nav--imageContainer {
-  width: 1.5rem;
-}
-
-.bottom__nav--imageContainer img {
-  width: 100%;
-}
-
 .footerHeader {
   font-family: 'Fira Sans', sans-serif;
-  font-size: 12px;
-  padding-top: 0.1rem;
+  font-size: 0.7rem;
+  padding-top: 0.3rem;
   color: #293340;
 }
