--- a/src/screen/homePage/style.css
+++ b/src/screen/homePage/style.css
@@ -102,7 +102,8 @@
 
 .popular__repSection {
   height: 43vh;
-  background: #ffffff;
+  background: #fff;
+  margin-top: 0.8rem;
   box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
 }
 
